<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Popular Movies</string>

    <string name="content_authority">com.example.popularmovies</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>

    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_label_popular">Popular</string>
    <string name="pref_sort_order_label_to_rated">Top Rated</string>
    <string name="pref_sort_order_key" translatable="false">sort_order</string>
    <string name="pref_sort_order_popular" translatable="false">popular</string>
    <string name="pref_sort_order_to_rated" translatable="false">top_rated</string>
    <string name="movie_poster_content_description">Movie Poster</string>

    <string name="detail_label_overview">Overview</string>
    <string name="data_unavailable">--Data Unavailable--</string>
    <string name="votes_placeholder">/10</string>
    <string name="detail_label_trailers">Trailers</string>
    <string name="detail_label_reviews">Reviews</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="movie_favorite_state_content_description">Movie Favorite State</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="action_favorites">Favorites</string>

</resources>