<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_container_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/movie_detail_title_text_size"
                    android:textStyle="bold"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/genres_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/movie_subtitle_text_size"
                    tools:text="Drama, Comedy" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/ContentRowStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/poster_iv"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/movie_image_height"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_poster_content_description"
                        android:scaleType="centerCrop" />

                </LinearLayout>

                <LinearLayout
                    style="@style/ContentRowStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/release_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/movie_subtitle_text_size"
                            android:layout_marginRight="@dimen/activity_content_horizontal_padding"
                            android:textStyle="bold"
                            tools:text="2017" />

                        <TextView
                            android:id="@+id/status_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/movie_subtitle_text_size"
                            android:textStyle="bold"
                            tools:text="Released" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/runtime_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="120 min" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/vote_average_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="8.5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/votes_placeholder" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/favorite_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/movie_favorite_state_content_description"
                        tools:src="@drawable/ic_star_black_24dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_overview"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/overview_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_trailers"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/videos_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/ContentRowStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_reviews"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviews_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>